# Calliope

./: README.md  cap_led.raw
Calliope_Desktop/: CMakeLists.txt  README.md  audio_capture.cpp  audio_capture.h  main.cpp  transfer.cpp  transfer.h
Calliope_Desktop/tools/: README.md
Calliope_Mobile/: settings.gradle.kts
Calliope_Mobile/app/: build.gradle.kts
Calliope_Mobile/app/src/androidTest/java/com/example/calliope_mobile/: ExampleInstrumentedTest.kt
Calliope_Mobile/app/src/main/: AndroidManifest.xml
Calliope_Mobile/app/src/main/java/com/example/calliope_mobile/: MainActivity.kt
Calliope_Mobile/app/src/main/java/com/example/calliope_mobile/ui/theme/: Color.kt  Theme.kt  Type.kt
Calliope_Mobile/app/src/main/res/drawable/: calliope_launcher_foreground.xml
Calliope_Mobile/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
Calliope_Mobile/app/src/main/res/values/: strings.xml  themes.xml
Calliope_Mobile/app/src/test/java/com/example/calliope_mobile/: ExampleUnitTest.kt
Calliope_Mobile/gradle/wrapper/: gradle-wrapper.properties
